[project]
name = "gnmi-py"
version = "0.7.1"
description = "Python gNMI client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.30.0",
    "pytest>=8.3.5",
    "setuptools>=78.1.0",
]
