[project]
name = "gnmi-py"
version = "0.7.1"
description = "Python gNMI client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.71.0",
    "grpcio-tools==1.71.0",
    "protobuf==5.29.4",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.30.0",
    "pytest>=8.3.5",
    "setuptools>=78.1.0",
    "sphinx>=7.4.7",
]

[project.scripts]
gnmipy = "gnmi:entry.main"
