[project]
name = "gnmi-py"
dynamic = ["version"]
authors = [
    {name = "Jesse Mather", email = "jmather@arista.com"},
]
license = "MIT"
description = "Python gNMI client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grpcio==1.62.3",
    "grpcio-tools==1.62.3",
    "protobuf==4.25.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "grpcio-tools>=1.30.0",
    "pytest>=8.3.5",
    "setuptools>=78.1.0",
    "sphinx>=7.4.7",
]

[project.scripts]
gnmipy = "gnmi:entry.main"
